--- a/JSON.html
+++ b/JSON.html
@@ -121,9 +121,8 @@ function topDeals(jsonObj){
 
 
 
-		// Set all property for each element based on JSON //yaha se pata chal jayega okkkk..got it yes sir nai....haha chlo so jao an gn thankuu......yep....gn...band karta hu okkkkk
-
-		img.setAttribute('src', 'https://raw.githubusercontent.com/200395994/WeirdDealsWeb/master/WeirdDealsWeb/image/' + dealsOfDay[i].image);
+		// Set all property for each element based on JSON 
+		img.setAttribute('src', 'https://raw.githubusercontent.com/200395994/PROJECT4/master/image/' + dealsOfDay[i].image);
 		img.setAttribute('alt', dealsOfDay[i].name);
 
 		h2.textContent = dealsOfDay[i].name;
